--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     "require": {
         "php": "^7.3",
         "composer-plugin-api": "^2",
-        "composer/package-versions-deprecated": "^1.11.99",
+        "codeception/module-webdriver": "^1.4",
+        "czproject/git-php": "^4.0",
         "myclabs/php-enum": "^1.8",
-        "ondram/ci-detector": "^4.1",
-        "symfony/process": "^5.2"
+        "ondram/ci-detector": "^4.1"
     },
     "autoload": {
         "psr-4": {
@@ -38,7 +38,7 @@
         "fix": "vendor/bin/rector process && vendor/bin/php-cs-fixer fix --diff",
         "test:lint": "vendor/bin/rector process --dry-run && vendor/bin/php-cs-fixer fix --dry-run --diff",
         "test:static": "vendor/bin/phpstan analyse --no-interaction --no-progress && vendor/bin/phpcs --standard=PSR12 ./src",
-        "test:unit": "vendor/bin/phpunit",
+        "test:unit": "vendor/bin/phpunit tests",
         "test": [
             "@test:lint",
             "@test:static",
