--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.3",
+        "php": "^7.4||^8.0",
+        "ext-json": "*",
         "composer-plugin-api": "^2",
-        "codeception/module-webdriver": "^1.4",
+        "composer-runtime-api": "^2",
+        "codeception/module-webdriver": "^2.0",
         "czproject/git-php": "^4.0",
         "myclabs/php-enum": "^1.8",
         "ondram/ci-detector": "^4.1"
@@ -23,11 +25,11 @@
         }
     },
     "require-dev": {
-        "adamwojs/php-cs-fixer-phpdoc-force-fqcn": "^1.1",
-        "friendsofphp/php-cs-fixer": "^2.18",
-        "phpstan/phpstan": "^0.12.90",
+        "adamwojs/php-cs-fixer-phpdoc-force-fqcn": "^2.0",
+        "friendsofphp/php-cs-fixer": "^3.8",
+        "phpstan/phpstan": "^1.5",
         "phpunit/phpunit": "^9.5",
-        "rector/rector": "^0.11.35",
+        "rector/rector": "^0.12.21",
         "squizlabs/php_codesniffer": "^3.6"
     },
     "config": {
