--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,11 @@ name: Test
 
 on:
     push:
-        branches: [ development, master ]
+        branches: [ development, main ]
     pull_request:
-        branches: [ development, master ]
+        branches: [ development, main ]
+    schedule:
+        -   cron: 0 3 * * 1,3,5
     workflow_dispatch:
 
 jobs:
@@ -12,7 +14,8 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                php: [ 7.3, 7.4 ]
+                php: [ 7.4, 8.0, 8.1 ]
+            fail-fast: false
         steps:
             -   name: Checkout
                 uses: actions/checkout@v2
